# dprint-plugin-patsnap

./: Cargo.toml  README.md  dprint.json  example.patsnap
docs/: patsnap-search-reference.md
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  mod.rs  resolve_config.rs  types.rs
src/generation/: context.rs  generate.rs  mod.rs
src/parser/: ast.rs  fields.rs  lexer.rs  mod.rs  parser.rs  token.rs
tests/: test.rs
tests/specs/basic/: Basic_All.txt
tests/specs/comments/: Comments_All.txt
tests/specs/config/: BoolCase_Preserve.txt  BoolCase_Uppercase.txt  FieldCase_Preserve.txt  FieldCase_Uppercase.txt  OperatorPosition_After.txt  QuoteStyle_Double.txt  QuoteStyle_Single.txt
tests/specs/fields/: Fields_All.txt
tests/specs/keywords/: Keywords_All.txt
tests/specs/line_breaking/: LineBreaking_All.txt
tests/specs/operators/: Operators_All.txt
